// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorSummary ErrorSummary.Body matches snapshot: ErrorSummary.Body 1`] = `
<div>
  <div
    class="nhsuk-error-summary__body"
  >
    Body
  </div>
</div>
`;

exports[`ErrorSummary ErrorSummary.List matches snapshot: ErrorSummary.List 1`] = `
<div>
  <ul
    class="nhsuk-list nhsuk-error-summary__list"
  >
    List
  </ul>
</div>
`;

exports[`ErrorSummary ErrorSummary.ListItem matches snapshot: ErrorSummary.ListItem 1`] = `
<div>
  <li>
    <a>
      ListItem
    </a>
  </li>
</div>
`;

exports[`ErrorSummary ErrorSummary.Title matches snapshot: ErrorSummary.Title 1`] = `
<div>
  <h2
    class="nhsuk-error-summary__title"
  >
    Title
  </h2>
</div>
`;

exports[`ErrorSummary matches snapshot: ErrorSummary 1`] = `
<div>
  <div
    class="nhsuk-error-summary"
    tabindex="-1"
  >
    <div
      role="alert"
    />
  </div>
</div>
`;
